--- a/index.css
+++ b/index.css
@@ -157,7 +157,7 @@ img {vertical-align: middle;}
 .section-style{
     /* background-color: red; */
     /* margin: 4% 0 0 0; */
-    padding:8%;
+    padding: .4% 4% 8% 8%;
 }
 .heading-secondary{
     font-size: 3.6em;
@@ -272,6 +272,42 @@ img {vertical-align: middle;}
 .card-air-dispersion{
   background: red;
 }
+/*client cards*/
+.client{
+  display: grid;
+  grid-template-rows: auto;
+  justify-content: center;
+  align-items: center;
+  row-gap: 4em;
+}
+.client-card{
+  /* background: rgb(197, 192, 192); */
+  border-radius: .8em;
+  box-shadow: .1em .1em .2em .4em rgba(0, 0, 0, 0.205);
+  text-align: center;
+  height: 45vh;
+  display: grid;
+  grid-template-rows: auto;
+  row-gap: 4%;
+
+}
+.section-style h4{
+  font-size: 2.4em;
+  font-family: inherit;
+  color: #717171;
+  margin: 0 0 2em 0;
+}
+.client-card img{
+  width: 100%;
+  height: 30vh;
+  padding-bottom: 0;
+  border-radius: .2em;
+  box-shadow: .1em .1em .2em .4em rgba(0, 0, 0, 0.112);
+}
+.span-text_style{
+font-weight: 700;
+font-size: 2em;
+}
 }
   @media (max-width: 952px){
     nav{
@@ -327,6 +363,42 @@ img {vertical-align: middle;}
     }
 .card-air-dispersion{
   background: red;
+}
+/*client cards*/
+.client{
+  display: grid;
+  grid-template-rows: auto;
+  justify-content: center;
+  align-items: center;
+  row-gap: 4em;
+}
+.client-card{
+  /* background: rgb(197, 192, 192); */
+  border-radius: .8em;
+  box-shadow: .1em .1em .2em .4em rgba(0, 0, 0, 0.205);
+  text-align: center;
+  height: 45vh;
+  display: grid;
+  grid-template-rows: auto;
+  row-gap: 4%;
+
+}
+.section-style h4{
+  font-size: 2.4em;
+  font-family: inherit;
+  color: #717171;
+  margin: 0 0 2em 0;
+}
+.client-card img{
+  width: 100%;
+  height: 30vh;
+  padding-bottom: 0;
+  border-radius: .2em;
+  box-shadow: .1em .1em .2em .4em rgba(0, 0, 0, 0.112);
+}
+.span-text_style{
+font-weight: 700;
+font-size: 2em;
 }
   }
   @media (max-width: 858px){
@@ -406,6 +478,43 @@ img {vertical-align: middle;}
     .card-air-dispersion{
       background: red;
     }
+    /*client cards*/
+.client{
+  display: grid;
+  grid-template-columns: 28% 28%  28%;
+  justify-content: center;
+  align-items: center;
+  column-gap: 12em;
+  row-gap: 4em;
+}
+.client-card{
+  /* background: rgb(197, 192, 192); */
+  border-radius: .8em;
+  box-shadow: .1em .1em .2em .4em rgba(0, 0, 0, 0.205);
+  text-align: center;
+  height: 45vh;
+  display: grid;
+  grid-template-rows: auto;
+  row-gap: 4%;
+
+}
+.section-style h4{
+  font-size: 2.4em;
+  font-family: inherit;
+  color: #717171;
+  margin: 0 0 2em 0;
+}
+.client-card img{
+  width: 100%;
+  height: 30vh;
+  padding-bottom: 0;
+  border-radius: .2em;
+  box-shadow: .1em .1em .2em .4em rgba(0, 0, 0, 0.112);
+}
+.span-text_style{
+font-weight: 700;
+font-size: 2em;
+}
   }
 
   /* footer */
@@ -457,10 +566,10 @@ img {vertical-align: middle;}
 /*client cards*/
 .client{
     display: grid;
-    grid-template-columns: 33.3% 33.3%  33.3%;
+    grid-template-columns: 28% 28%  28%;
     justify-content: center;
     align-items: center;
-    column-gap: 4em;
+    column-gap: 12em;
     row-gap: 4em;
 }
 .client-card{
@@ -468,7 +577,10 @@ img {vertical-align: middle;}
     border-radius: .8em;
     box-shadow: .1em .1em .2em .4em rgba(0, 0, 0, 0.205);
     text-align: center;
-    height: 75vh;
+    height: 45vh;
+    display: grid;
+    grid-template-rows: auto;
+    row-gap: 4%;
 
 }
 .section-style h4{
@@ -479,9 +591,14 @@ img {vertical-align: middle;}
 }
 .client-card img{
     width: 100%;
-    height: 60vh;
-    padding-top: 4%;
-    padding-bottom: 4%;
+    height: 30vh;
+    padding-bottom: 0;
+    border-radius: .2em;
+    box-shadow: .1em .1em .2em .4em rgba(0, 0, 0, 0.112);
+}
+.span-text_style{
+  font-weight: 700;
+  font-size: 2em;
 }
 /* contacts */
 .margin{
